大致的功能已完成 就打入還沒

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,18 @@
         "ostream": "cpp",
         "iostream": "cpp",
         "vector": "cpp",
-        "utility": "cpp"
+        "utility": "cpp",
+        "__bit_reference": "cpp",
+        "__hash_table": "cpp",
+        "__split_buffer": "cpp",
+        "__tree": "cpp",
+        "array": "cpp",
+        "initializer_list": "cpp",
+        "iterator": "cpp",
+        "map": "cpp",
+        "string": "cpp",
+        "string_view": "cpp",
+        "unordered_map": "cpp",
+        "iosfwd": "cpp"
     }
 }
